--- a/templates/projects.html
+++ b/templates/projects.html
@@ -4,14 +4,24 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="page-heading">
-                    <h1>About Me</h1>
-                    <span class="subheading">This is my portfolio of projects.</span>
+                    <h1>projects list</h1>
                 </div>
             </div>
         </div>
-    </div>0
+    </div>
 </header>
-
+<!-- Main Content-->
+<main class="mb-4">
+    <div class="container px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <p>
+                    This is my
+                </p>
+            </div>
+        </div>
+    </div>
+</main>
 
 </body>
 
